--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -15,6 +15,7 @@
             ['bold', 'italic', 'underline'],
             [{ 'list': 'ordered'}, { 'list': 'bullet' }],
             [{ 'align': [] }],
+            ['video'],
             ['image']
         ]
     }
