--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,20 @@
 <%- include('header') -%>
 <%- include('navigation') -%>
 <div class="center">
+    <div class="ad"></div>
     <h1><%= title %></h1>
     <p><%- content %></p>
+     
+    <div class="ad">
+        <script type="text/javascript" src="//cdn.refersion.com/creative.js"></script>
+<script>$rfsn_creative.generate('refersion_client/310/creatives/dynamic/69944-dacd8f3ffa35fb7e25930723765e19d9.json', {
+	aid: '7879131.8859099'
+});</script><div id="rfsn_img_69944"></div>
+        <script type="text/javascript" src="//cdn.refersion.com/creative.js"></script>
+        <script>$rfsn_creative.generate('refersion_client/310/creatives/dynamic/69944-dacd8f3ffa35fb7e25930723765e19d9.json', {
+            aid: '7879131.8859099'
+        });</script><div id="rfsn_img_69944"></div>
+    </div> 
 </div>
 
 <%- include('footer') -%>
