--- a/public/styles.css
+++ b/public/styles.css
@@ -9,12 +9,14 @@ h1, h2, h3 {
     font-family: 'Roboto', sans-serif;
     /* You can adjust font weights and other properties as needed */
     font-weight: 500;
+
 }
 
 p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'monospace' 'Roboto', sans-serif;
     /* You can adjust font weights and other properties as needed */
     font-weight: 400;
+    font-size: large;
 }
 .head{
     display:flex;
@@ -83,7 +85,9 @@ body .center{
 }
 .articles{
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+    max-width: 800px; /* Adjust the value as needed */
+    
 }
 
 .article{
@@ -95,6 +99,10 @@ body .center{
         border-radius: 32px;
         padding: 2%;
         margin: 1%;
+        max-width: 50%; /* This ensures that the article does not grow beyond its container */
+    box-sizing: border-box;
+    
+        
         
 }
 @media  (max-width:900px) {
@@ -103,4 +111,17 @@ body .center{
         /* flex-wrap: wrap; */
         flex-direction: column;
     }
+    .article{
+        max-width: 100%;
+    }
+    
 }
+
+
+
+.ad{
+    display: flex;
+    padding: 0 0 5% 0;
+    justify-content: space-between;
+}
+
