--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,44 @@
 <%- include('header') -%>
 <%- include('navigation') -%>  
 <div class="center">
+    
     <h1><%= title %></h1>
 <p class="description"><%= homeContent %></p>
-<% if(articles){ %>
-    <div class="articles">
-        <% articles.forEach((article)=>{ %>
-         
-        <% let subString =article.content.slice(0,250) + '. . .'; %>
+
+  
+   
+    <% if(articles){ %>
+        <div class="articles">
+            <% articles.forEach((article)=>{ %>
              
-           <div class="article">
-               <h3><%=article.title %></h3>
-               <div id="content"><%- subString  %></div>
-               <a id='post' href="/post/<%= article._id %>">Read more</a>
-           </div>
-            
-     <%  }) %>
-<% } %>
+            <% let subString =article.content.slice(0,250) + '. . .'; %>
+                 
+               <div class="article">
+                   <h3><%=article.title %></h3>
+                   <div id="content"><%- subString  %></div>
+                   <a id='post' href="/post/<%= article._id %>">Read more</a>
+               </div>
+                
+         <%  }) %>
+         </div>
+    <% } %>
+   
+    <div class="ad">
+        <script type="text/javascript" src="//cdn.refersion.com/creative.js"></script>
+<script>$rfsn_creative.generate('refersion_client/310/creatives/dynamic/69944-dacd8f3ffa35fb7e25930723765e19d9.json', {
+	aid: '7879131.8859099'
+});</script><div id="rfsn_img_69944"></div>
+        <script type="text/javascript" src="//cdn.refersion.com/creative.js"></script>
+        <script>$rfsn_creative.generate('refersion_client/310/creatives/dynamic/69944-dacd8f3ffa35fb7e25930723765e19d9.json', {
+            aid: '7879131.8859099'
+        });</script><div id="rfsn_img_69944"></div>
+    </div> 
+   
+</div>
 
 
 </div>
-</div>
+
 
 
 <%- include('footer') -%>
